Add test cases for CREATE TABLE

--- a/src/test/modules/test_ddl_deparse_regress/Makefile
+++ b/src/test/modules/test_ddl_deparse_regress/Makefile
@@ -21,7 +21,8 @@ REGRESS = test_ddl_deparse \
 	create_extension \
 	create_schema \
 	create_table \
-	aggregate
+	aggregate \
+	create_table_test
 
 export REGRESS
 
