--- a/src/test/modules/test_ddl_deparse_regress/meson.build
+++ b/src/test/modules/test_ddl_deparse_regress/meson.build
@@ -32,6 +32,8 @@ tests += {
       'create_extension',
       'create_schema',
       'create_table',
+      'aggregate',
+      'create_table_test'
     ],
   },
   'tap': {
