Add ALTER TABLE test cases

--- a/src/test/modules/test_ddl_deparse_regress/Makefile
+++ b/src/test/modules/test_ddl_deparse_regress/Makefile
@@ -20,9 +20,10 @@ DATA = test_ddl_deparse_regress--1.0.sql
 REGRESS = test_ddl_deparse \
 	create_extension \
 	create_schema \
-	create_table \
 	aggregate \
-	create_table_test
+	create_table_test \
+	constraints \
+	alter_table
 
 export REGRESS
 
