Fixed some issues in testing harness

--- a/src/test/modules/test_ddl_deparse_regress/Makefile
+++ b/src/test/modules/test_ddl_deparse_regress/Makefile
@@ -21,7 +21,7 @@ REGRESS = test_ddl_deparse \
 	create_extension \
 	create_schema \
 	aggregate \
-	create_table_test \
+	create_table \
 	constraints \
 	alter_table
 
