--- a/src/test/modules/test_ddl_deparse_regress/meson.build
+++ b/src/test/modules/test_ddl_deparse_regress/meson.build
@@ -32,7 +32,7 @@ tests += {
       'create_extension',
       'create_schema',
       'aggregate',
-      'create_table_test',
+      'create_table',
       'constraints',
       'alter_table'
     ],
