DDL messaging infrastructure for DDL replication.
DDL messaging infrastructure for DDL replication.

--- a/src/backend/replication/logical/Makefile
+++ b/src/backend/replication/logical/Makefile
@@ -16,6 +16,7 @@ override CPPFLAGS := -I$(srcdir) $(CPPFLAGS)
 
 OBJS = \
 	applyparallelworker.o \
+	ddlmessage.o \
 	decode.o \
 	launcher.o \
 	logical.o \
