--- a/src/test/modules/test_ddl_deparse_regress/meson.build
+++ b/src/test/modules/test_ddl_deparse_regress/meson.build
@@ -34,7 +34,8 @@ tests += {
       'aggregate',
       'create_table',
       'constraints',
-      'alter_table'
+      'alter_table',
+      'create_table_as'
     ],
   },
   'tap': {
