test cases for index and sequence

--- a/src/test/modules/test_ddl_deparse_regress/Makefile
+++ b/src/test/modules/test_ddl_deparse_regress/Makefile
@@ -18,13 +18,14 @@ DATA = test_ddl_deparse_regress--1.0.sql
 
 # test_ddl_deparse must be first
 REGRESS = test_ddl_deparse \
-	create_extension \
 	create_schema \
 	aggregate \
 	create_table \
 	constraints \
 	alter_table \
-	create_table_as
+	create_table_as \
+	index \
+	sequence
 
 export REGRESS
 
